--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "proton-quark-error",
-  "version": "1.3.2",
-  "description": "Load error defined and use them with proton microframework",
+  "name": "cano-cube-error",
+  "version": "1.4.1",
+  "description": "Load error defined and use them with cano-koa microframework",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
